--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 sentence-transformers
 uvicorn
 ctransformers
+langchain_community
 langchain
 python-box
 streamlit
 boto3
 awscli
-python-dotenv
+os
